1) Fixed issues with tree collapse and expand. 2) LinkedTree without edges.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -170,9 +170,9 @@ padding: 0;
             background-color: #0469D9;
            }
 
-           #btn-treewlinking{
+           #btn-treeswlinking{
             font-size:25px;
-            background-color: #0469D9;
+            background-color: #b43649;
            }
 
 
